data/derived/comb/progs/unify/prog7677.ml.out
Characters 82-90:
  let f a x = x ^ sep :: a in
                  ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
